# LearnedSecondaryIndex

./: .clang-tidy  .env  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  build-debug.sh  build.sh  learned_secondary_index.hpp  paper_plots.ipynb  requirements.txt  run.sh  setup.sh  test.sh
include/: lsi.hpp
include/convenience/: builtins.hpp  undef.hpp
include/util/: fingerprinter.hpp  permvector.hpp  support.hpp
include/util/bitpacking/: README  bit_packing.h  byte_coding.h
results/: results.json  results_without_mfence.json
simulation/: simulate.csv  simulate.py
src/: CMakeLists.txt  benchmarks.cpp  benchmarks.hpp  competitors.hpp  tests.cpp
src/competitors/: art.hpp  btree.hpp  fast64.hpp  hash.hpp
src/support/: datasets.hpp  probing_set.hpp
src/tests/: art-tests.hpp  btree-tests.hpp  fast64-tests.hpp  hash-tests.hpp  lsi-tests.hpp  permvector-tests.hpp
